C_Programs/.metadata/.plugins/org.eclipse.cdt.ui/Day_4.2.build.log
08:50:41 **** Incremental Build of configuration Debug for project Day_4.2 ****
make all 
Building file: ../src/preassign4.c
Invoking: GCC C Compiler
gcc -O0 -g3 -Wall -c -fmessage-length=0 -MMD -MP -MF"src/preassign4.d" -MT"src/preassign4.o" -o "src/preassign4.o" "../src/preassign4.c"
../src/preassign4.c: In function ‘main’:
../src/preassign4.c:54:62: error: request for member ‘name’ in something not a structure or union
   printf("\nBook name %s \nBook id %d\nBook price %f",argv[i]->name,argv[i]->id,argv[i].price);
                                                              ^~
../src/preassign4.c:54:76: error: request for member ‘id’ in something not a structure or union
src/subdir.mk:18: recipe for target 'src/preassign4.o' failed
   printf("\nBook name %s \nBook id %d\nBook price %f",argv[i]->name,argv[i]->id,argv[i].price);
                                                                            ^~
../src/preassign4.c:54:88: error: request for member ‘price’ in something not a structure or union
   printf("\nBook name %s \nBook id %d\nBook price %f",argv[i]->name,argv[i]->id,argv[i].price);
                                                                                        ^
../src/preassign4.c:45:9: warning: unused variable ‘b’ [-Wunused-variable]
  book_t b[3];
         ^
make: *** [src/preassign4.o] Error 1

08:50:42 Build Failed. 5 errors, 1 warnings. (took 867ms)

